update(gateway): update company handler; add new routes
