# backend/gateway/internal/entities/company.go
@@ -14,11 +14,9 @@ type CreateCompanyResponse struct {
 }
 
 func (e *CreateCompanyRequest) Validate() error {
-	// Валидация title
 	if err := utils.ValidateCompanyTitle(e.Title); err != nil {
 		return err
 	}
-
 	return nil
 }
 
@@ -32,11 +30,9 @@ type GetCompanyResponse struct {
 }
 
 func (e *GetCompanyRequest) Validate() error {
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
 	return nil
 }
 
@@ -49,40 +45,35 @@ type GetCompaniesResponse struct {
 }
 
 func (e *GetCompaniesRequest) Validate() error {
-	// Валидация offset
 	if err := utils.ValidateNumber(int(e.Offset), 0, 0, "offset"); err != nil {
 		return err
 	}
-
-	// Валидация count
 	if err := utils.ValidateNumber(int(e.Count), 1, 100, "count"); err != nil {
 		return err
 	}
-
 	return nil
+}
+
+type GetUserCompaniesResponse struct {
+	Companies []*GetCompanyResponse `json:"companies"`
 }
 
 type UpdateCompanyTitleRequest struct {
 	Title string `json:"title"`
 }
 type UpdateCompanyTitleRequestFull struct {
-	CompanyUUID string `json:"company_uuid"`
-	Title       string `json:"title"`
+	CompanyUUID string
+	Title       string
 }
-type UpdateCompanyTitleResponse struct {
-}
+type UpdateCompanyTitleResponse struct{}
 
 func (e *UpdateCompanyTitleRequestFull) Validate() error {
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
-	// Валидация title
 	if err := utils.ValidateCompanyTitle(e.Title); err != nil {
 		return err
 	}
-
 	return nil
 }
 
@@ -90,38 +81,30 @@ type UpdateCompanyStatusRequest struct {
 	Status string `json:"status"`
 }
 type UpdateCompanyStatusRequestFull struct {
-	CompanyUUID string `json:"company_uuid"`
-	Status      string `json:"status"`
+	CompanyUUID string
+	Status      string
 }
-type UpdateCompanyStatusResponse struct {
-}
+type UpdateCompanyStatusResponse struct{}
 
 func (e *UpdateCompanyStatusRequestFull) Validate() error {
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
-	// Валидация status
 	if !utils.ValidateIsArrayContain(e.Status, []string{"open", "close"}) {
 		return fmt.Errorf("incorrect company status")
 	}
-
 	return nil
 }
 
 type DeleteCompanyRequest struct {
-	CompanyUUID string `json:"company_uuid"`
+	CompanyUUID string
 }
-type DeleteCompanyResponse struct {
-}
+type DeleteCompanyResponse struct{}
 
 func (e *DeleteCompanyRequest) Validate() error {
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
 	return nil
 }
 
@@ -129,40 +112,34 @@ type CreateCompanyJoinCodeRequest struct {
 	CodeTTL int64 `json:"code_ttl"`
 }
 type CreateCompanyJoinCodeRequestFull struct {
-	CompanyUUID string `json:"company_uuid"`
-	CodeTTL     int64  `json:"code_ttl"`
+	CompanyUUID string
+	CodeTTL     int64
 }
 type CreateCompanyJoinCodeResponse struct {
 	Code string `json:"code"`
 }
 
 func (e *CreateCompanyJoinCodeRequestFull) Validate() error {
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
-	// Валидация CodeTTL (min: 60s; max: 1 week)
 	if err := utils.ValidateNumber(int(e.CodeTTL), 60, 60*60*24*7, "code_ttl"); err != nil {
 		return err
 	}
-
 	return nil
 }
 
 type GetCompanyJoinCodesRequest struct {
-	CompanyUUID string `json:"company_uuid"`
+	CompanyUUID string
 }
 type GetCompanyJoinCodesResponse struct {
 	Codes []string `json:"codes"`
 }
 
 func (e *GetCompanyJoinCodesRequest) Validate() error {
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
 	return nil
 }
 
@@ -170,23 +147,18 @@ type DeleteCompanyJoinCodeRequest struct {
 	Code string `json:"code"`
 }
 type DeleteCompanyJoinCodeRequestFull struct {
-	CompanyUUID string `json:"company_uuid"`
-	Code        string `json:"code"`
+	CompanyUUID string
+	Code        string
 }
-type DeleteCompanyJoinCodeResponse struct {
-}
+type DeleteCompanyJoinCodeResponse struct{}
 
 func (e *DeleteCompanyJoinCodeRequestFull) Validate() error {
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
-	// Валидация join code
 	if err := utils.ValidateCompanyJoinCode(e.Code); err != nil {
 		return err
 	}
-
 	return nil
 }
 
@@ -199,41 +171,36 @@ type JoinCompanyResponse struct {
 }
 
 func (e *JoinCompanyRequest) Validate() error {
-	// Валидация join code
 	if err := utils.ValidateCompanyJoinCode(e.Code); err != nil {
 		return err
 	}
-
 	return nil
 }
 
 type GetCompanyEmployeeRequest struct {
-	TargetUUID  string `json:"target_uuid"`
-	CompanyUUID string `json:"company_uuid"`
+	TargetUUID  string
+	CompanyUUID string
 }
 type GetCompanyEmployeeResponse struct {
-	UserUUID string `json:"user_uuid"`
-	Role     string `json:"role"`
-	JoinedAt string `json:"joined_at"`
+	UserUUID       string `json:"user_uuid"`
+	Role           string `json:"role"`
+	DepartmentUUID string `json:"department_uuid"`
+	JoinedAt       string `json:"joined_at"`
 }
 
 func (e *GetCompanyEmployeeRequest) Validate() error {
-	// Валидация target_uuid
 	if err := utils.ValidateUUID(e.TargetUUID); err != nil {
 		return err
 	}
-
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
 	return nil
 }
 
 type GetCompanyEmployeesRequest struct {
-	CompanyUUID    string `json:"company_uuid"`
-	DepartmentUUID string `json:"department_uuid"`
+	CompanyUUID    string
+	DepartmentUUID string `query:"department_uuid"`
 	Role           string `query:"role"`
 	Offset         int64  `query:"offset"`
 	Count          int64  `query:"count"`
@@ -243,37 +210,29 @@ type GetCompanyEmployeesResponse struct {
 }
 
 func (e *GetCompanyEmployeesRequest) Validate() error {
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
-	// Валидация department_uuid
-	if err := utils.ValidateUUID(e.DepartmentUUID); e.DepartmentUUID != "" && err != nil {
-		return err
+	if e.DepartmentUUID != "" {
+		if err := utils.ValidateUUID(e.DepartmentUUID); err != nil {
+			return err
+		}
 	}
-
-	// Валидация role
 	if !utils.ValidateIsArrayContain(e.Role, []string{"", "unemployed", "inspector", "engineer", "manager", "analytic", "chief"}) {
 		return fmt.Errorf("incorrect employee role")
 	}
-
-	// Валидация offset
 	if err := utils.ValidateNumber(int(e.Offset), 0, 0, "offset"); err != nil {
 		return err
 	}
-
-	// Валидация count
 	if err := utils.ValidateNumber(int(e.Count), 1, 100, "count"); err != nil {
 		return err
 	}
-
 	return nil
 }
 
 type GetCompanyEmployeesSummaryRequest struct {
 	CompanyUUID    string
-	DepartmentUUID string `json:"department_uuid"`
+	DepartmentUUID string `query:"department_uuid"`
 }
 type GetCompanyEmployeesSummaryResponse struct {
 	ChiefCount      int64 `json:"chief_count"`
@@ -285,16 +244,14 @@ type GetCompanyEmployeesSummaryResponse struct {
 }
 
 func (e *GetCompanyEmployeesSummaryRequest) Validate() error {
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
-	// Валидация department_uuid
-	if err := utils.ValidateUUID(e.DepartmentUUID); e.DepartmentUUID != "" && err != nil {
-		return err
+	if e.DepartmentUUID != "" {
+		if err := utils.ValidateUUID(e.DepartmentUUID); err != nil {
+			return err
+		}
 	}
-
 	return nil
 }
 
@@ -302,49 +259,187 @@ type UpdateEmployeeRoleRequest struct {
 	Role string `json:"role"`
 }
 type UpdateEmployeeRoleRequestFull struct {
-	CompanyUUID string `json:"company_uuid"`
-	TargetUUID  string `json:"target_uuid"`
-	Role        string `json:"role"`
+	CompanyUUID string
+	TargetUUID  string
+	Role        string
 }
-type UpdateEmployeeRoleResponse struct {
-}
+type UpdateEmployeeRoleResponse struct{}
 
 func (e *UpdateEmployeeRoleRequestFull) Validate() error {
-	// Валидация target_uuid
 	if err := utils.ValidateUUID(e.TargetUUID); err != nil {
 		return err
 	}
-
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
-
-	// Валидация role
 	if !utils.ValidateIsArrayContain(e.Role, []string{"unemployed", "engineer", "manager", "analytic", "inspector", "chief"}) {
 		return fmt.Errorf("incorrect employee role")
 	}
-
 	return nil
 }
 
 type RemoveCompanyEmployeeRequest struct {
-	TargetUUID  string `json:"target_uuid"`
-	CompanyUUID string `json:"company_uuid"`
+	TargetUUID  string
+	CompanyUUID string
 }
-type RemoveCompanyEmployeeResponse struct {
-}
+type RemoveCompanyEmployeeResponse struct{}
 
 func (e *RemoveCompanyEmployeeRequest) Validate() error {
-	// Валидация target_uuid
 	if err := utils.ValidateUUID(e.TargetUUID); err != nil {
 		return err
 	}
-
-	// Валидация company_uuid
 	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
 		return err
 	}
+	return nil
+}
 
+// Department
+
+type CreateDepartmentRequest struct {
+	Title string `json:"title"`
+}
+type CreateDepartmentRequestFull struct {
+	CompanyUUID string
+	Title       string
+}
+type CreateDepartmentResponse struct {
+	DepartmentUUID string `json:"department_uuid"`
+}
+
+func (e *CreateDepartmentRequestFull) Validate() error {
+	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateCompanyTitle(e.Title); err != nil {
+		return err
+	}
+	return nil
+}
+
+type GetDepartmentRequest struct {
+	CompanyUUID    string
+	DepartmentUUID string
+}
+type GetDepartmentResponse struct {
+	DepartmentUUID string `json:"department_uuid"`
+	CompanyUUID    string `json:"company_uuid"`
+	Title          string `json:"title"`
+	CreatedAt      string `json:"created_at"`
+	CreatedBy      string `json:"created_by"`
+}
+
+func (e *GetDepartmentRequest) Validate() error {
+	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateUUID(e.DepartmentUUID); err != nil {
+		return err
+	}
+	return nil
+}
+
+type GetCompanyDepartmentsRequest struct {
+	CompanyUUID string
+	Offset      int64 `query:"offset"`
+	Count       int64 `query:"count"`
+}
+type DepartmentListItem struct {
+	DepartmentUUID string `json:"department_uuid"`
+	Title          string `json:"title"`
+}
+type GetCompanyDepartmentsResponse struct {
+	Departments []*DepartmentListItem `json:"departments"`
+}
+
+func (e *GetCompanyDepartmentsRequest) Validate() error {
+	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateNumber(int(e.Offset), 0, 0, "offset"); err != nil {
+		return err
+	}
+	if err := utils.ValidateNumber(int(e.Count), 1, 100, "count"); err != nil {
+		return err
+	}
+	return nil
+}
+
+type UpdateDepartmentTitleRequest struct {
+	Title string `json:"title"`
+}
+type UpdateDepartmentTitleRequestFull struct {
+	CompanyUUID    string
+	DepartmentUUID string
+	Title          string
+}
+type UpdateDepartmentTitleResponse struct{}
+
+func (e *UpdateDepartmentTitleRequestFull) Validate() error {
+	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateUUID(e.DepartmentUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateCompanyTitle(e.Title); err != nil {
+		return err
+	}
+	return nil
+}
+
+type DeleteDepartmentRequest struct {
+	CompanyUUID    string
+	DepartmentUUID string
+}
+type DeleteDepartmentResponse struct{}
+
+func (e *DeleteDepartmentRequest) Validate() error {
+	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateUUID(e.DepartmentUUID); err != nil {
+		return err
+	}
+	return nil
+}
+
+type AddEmployeeToDepartmentRequest struct {
+	CompanyUUID    string
+	DepartmentUUID string
+	TargetUUID     string
+}
+type AddEmployeeToDepartmentResponse struct{}
+
+func (e *AddEmployeeToDepartmentRequest) Validate() error {
+	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateUUID(e.DepartmentUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateUUID(e.TargetUUID); err != nil {
+		return err
+	}
+	return nil
+}
+
+type RemoveEmployeeFromDepartmentRequest struct {
+	CompanyUUID    string
+	DepartmentUUID string
+	TargetUUID     string
+}
+type RemoveEmployeeFromDepartmentResponse struct{}
+
+func (e *RemoveEmployeeFromDepartmentRequest) Validate() error {
+	if err := utils.ValidateUUID(e.CompanyUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateUUID(e.DepartmentUUID); err != nil {
+		return err
+	}
+	if err := utils.ValidateUUID(e.TargetUUID); err != nil {
+		return err
+	}
 	return nil
 }
