# backend/gateway/internal/routes/routes.go
@@ -40,21 +40,29 @@ func SetupRoutes(router *fiber.App, app *app.App) {
 	auth.Delete("/user/account", app.AuthHandler.DeleteUser)
 
 	// Company handler
+	auth.Get("/company/my", app.CompanyHandler.GetUserCompanies)
 	auth.Get("/company/list", app.CompanyHandler.GetCompanies)
 	auth.Get("/company/:company_uuid", app.CompanyHandler.GetCompany)
 	auth.Get("/company/:company_uuid/codes", app.CompanyHandler.GetCompanyJoinCodes)
 	auth.Get("/company/:company_uuid/employee/:employee_uuid/info", app.CompanyHandler.GetCompanyEmployee)
 	auth.Get("/company/:company_uuid/employees/list", app.CompanyHandler.GetCompanyEmployees)
 	auth.Get("/company/:company_uuid/employees/summary", app.CompanyHandler.GetCompanyEmployeesSummary)
+	auth.Get("/company/:company_uuid/departments/list", app.CompanyHandler.GetCompanyDepartments)
+	auth.Get("/company/:company_uuid/department/:department_uuid", app.CompanyHandler.GetDepartment)
 	auth.Post("/company/create", app.CompanyHandler.CreateCompany)
 	auth.Post("/company/join", app.CompanyHandler.JoinCompany)
 	auth.Post("/company/:company_uuid/code", app.CompanyHandler.CreateCompanyJoinCode)
+	auth.Post("/company/:company_uuid/department", app.CompanyHandler.CreateDepartment)
+	auth.Post("/company/:company_uuid/department/:department_uuid/employee/:employee_uuid", app.CompanyHandler.AddEmployeeToDepartment)
 	auth.Patch("/company/:company_uuid/title", app.CompanyHandler.UpdateCompanyTitle)
 	auth.Patch("/company/:company_uuid/status", app.CompanyHandler.UpdateCompanyStatus)
 	auth.Patch("/company/:company_uuid/employee/:employee_uuid/role", app.CompanyHandler.UpdateEmployeeRole)
+	auth.Patch("/company/:company_uuid/department/:department_uuid/title", app.CompanyHandler.UpdateDepartmentTitle)
 	auth.Delete("/company/:company_uuid", app.CompanyHandler.DeleteCompany)
 	auth.Delete("/company/:company_uuid/code", app.CompanyHandler.DeleteCompanyJoinCode)
 	auth.Delete("/company/:company_uuid/employee/:employee_uuid", app.CompanyHandler.RemoveCompanyEmployee)
+	auth.Delete("/company/:company_uuid/department/:department_uuid", app.CompanyHandler.DeleteDepartment)
+	auth.Delete("/company/:company_uuid/department/:department_uuid/employee/:employee_uuid", app.CompanyHandler.RemoveEmployeeFromDepartment)
 
 	// Application handler
 	auth.Get("/application/:application_uuid", app.ApplicationHandler.GetApplication)
